# NarrativeAI

./: .env.example  .gitignore  Makefile  README.md  README.md.tmp  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: __init__.py  archetype.py  base.py  contrarian.py  entity.py  ingestion.py  orchestrator.py  ripple.py  synthesis.py
backend/app/agents/prompts/: archetype.py  briefing.py  contrarian.py  synthesis.py
backend/app/api/v1/: briefing.py  chat.py  debate.py  delta.py  dossiers.py  earnings.py  entities.py  market_pulse.py  portfolio_impact.py  ripples.py  router.py  rumor_tracker.py  search.py  stories.py  (+2 more)
backend/app/core/: constants.py  exceptions.py  logging.py
backend/app/db/: session.py
backend/app/models/: __init__.py  archetype.py  article.py  dossier.py  entity.py  ripple.py  user.py
backend/app/schemas/: briefing.py  delta.py  dossier.py  entity.py  ripple.py  story_dna.py  user.py
backend/app/services/: claude.py  delta.py  elasticsearch.py  fog.py  nlp.py  redis.py  scraper.py  sentiment.py  silence.py
backend/data/archetypes/: corporate_governance_collapse.json  founder_vs_board.json  mna_saga.json  regulatory_escalation.json  short_attack_playbook.json
backend/data/corpus/: demo_dossiers.json
backend/scripts/: ingest_corpus.py  precompute_dossiers.py  seed_archetypes.py  seed_demo_dossiers.py
backend/tests/: conftest.py
backend/tests/test_agents/: test_orchestrator.py
(+59 files in other folders)
